#231 refactor : 메서드 명 수정, toList() 반영